--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,37 @@
 {
-    "name": "mintware-de/streams",
-    "description": "A implementation of PSR-7",
-    "type": "library",
-    "require": {
-        "php": "5.6.* || ^7.0",
-        "psr/http-message": "^1.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^5.7"
-    },
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Julian Finkler",
-            "email": "julian@mintware.de"
-        }
-    ],
-    "minimum-stability": "stable",
-    "autoload": {
-      "psr-4": {
-        "MintWare\\Streams\\": "src/",
-        "MintWare\\Tests\\Streams\\": "tests/"
-      }
+  "name": "mintware-de/streams",
+  "description": "A implementation of the PSR-7 StreamInterface",
+  "keywords": [
+    "PSR",
+    "PSR-7",
+    "StreamInterface",
+    "ResourceStream",
+    "MemoryStream",
+    "InputStream",
+    "OutputStream",
+    "FileStream",
+    "Resource"
+  ],
+  "type": "library",
+  "require": {
+    "php": "5.6.* || ^7.0",
+    "psr/http-message": "^1.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.7"
+  },
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Julian Finkler",
+      "email": "julian@mintware.de"
     }
+  ],
+  "minimum-stability": "stable",
+  "autoload": {
+    "psr-4": {
+      "MintWare\\Streams\\": "src/",
+      "MintWare\\Tests\\Streams\\": "tests/"
+    }
+  }
 }
