--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,25 @@
 dist: trusty
 
 language: php
-php:
-  - '5.6'
-  - '7.0'
-  - '7.1'
-  - '7.2'
-  - '7.3'
+
+matrix:
+  include:
+  - php: '5.6'
+    env: COMPOSER_PREFER_LOWEST=true
+  - php: '5.6'
+    env: COMPOSER_PREFER_LOWEST=false
+  - php: '7.0'
+    env: COMPOSER_PREFER_LOWEST=true
+  - php: '7.0'
+    env: COMPOSER_PREFER_LOWEST=false
+  - php: '7.1'
+    env: COMPOSER_PREFER_LOWEST=true
+  - php: '7.1'
+    env: COMPOSER_PREFER_LOWEST=false
+  - php: '7.2'
+    env: COMPOSER_PREFER_LOWEST=false
+  - php: '7.3'
+    env: COMPOSER_PREFER_LOWEST=false
 
 branches:
   only: ['master']
