--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,13 @@
   ],
   "type": "library",
   "require": {
-    "php": "5.6.* || ^7.0",
+    "php": "^7.4 || ^8.0",
     "psr/http-message": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7"
+    "phpunit/phpunit": "^7.0 || ^8.0 || ^9.0",
+    "phpstan/phpstan": "^1.4",
+    "friendsofphp/php-cs-fixer": "^2.15"
   },
   "license": "MIT",
   "authors": [
@@ -33,5 +35,21 @@
       "MintWare\\Streams\\": "src/",
       "MintWare\\Tests\\Streams\\": "tests/"
     }
+  },
+  "scripts": {
+    "fix-cs": [
+      "./vendor/bin/php-cs-fixer fix ./src/ --using-cache=no --rules=@PSR2",
+      "./vendor/bin/php-cs-fixer fix ./tests/ --using-cache=no --rules=@PSR2"
+    ],
+    "fix-cs:dry-run": [
+      "./vendor/bin/php-cs-fixer fix ./src/ --using-cache=no --rules=@PSR2 --dry-run",
+      "./vendor/bin/php-cs-fixer fix ./tests/ --using-cache=no --rules=@PSR2 --dry-run"
+    ],
+    "phpstan": [
+      "./vendor/bin/phpstan"
+    ],
+    "test": [
+      "./vendor/bin/phpunit"
+    ]
   }
 }
