--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   "require-dev": {
     "phpunit/phpunit": "^7.0 || ^8.0 || ^9.0",
     "phpstan/phpstan": "^1.4",
-    "friendsofphp/php-cs-fixer": "^2.15"
+    "friendsofphp/php-cs-fixer": "^v3.8.0"
   },
   "license": "MIT",
   "authors": [
