--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
   ],
   "type": "library",
   "require": {
-    "php": "^7.4 || ^8.0",
-    "psr/http-message": "^1.0"
+    "php": "^8.2",
+    "psr/http-message": "^2.0.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.0 || ^8.0 || ^9.0",
-    "phpstan/phpstan": "^1.4",
-    "friendsofphp/php-cs-fixer": "^v3.8.0"
+    "phpunit/phpunit": "^9.0 || ^10.0 || ^11.0",
+    "phpstan/phpstan": "^1.11.4",
+    "friendsofphp/php-cs-fixer": "^v3.58.1"
   },
   "license": "MIT",
   "authors": [
