--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,6 +14,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Setup PHP with pre-release PECL extension
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.2'
+        coverage: xdebug
+    
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
 
